# codegame

./: MANIFEST.in  README.md  setup.cfg
codegame/: __main__.py
codegame/cli/: __init__.py  remote_info.py
codegame/core/: __init__.py  changelog_updater.py  creator.py  github_client.py  publishing.py
codegame/core/template/: .gitignore  README.md
codegame/game/: __init__.py  editor.py  indexview.py  testing.py
codegame/host/: __init__.py
codegame/misc/: constant.py  funcs.py  theme.py
codegame/pyrustic_data/backstage/data/: build_report.json
codegame/pyrustic_data/backstage/report/: build_report.json
codegame/view/: about.py  base.py  home.py  information.py  installer.py  player.py
docs/modules/: README.md
docs/modules/content/codegame.__main__/: classes.md  constants.md  functions.md
docs/modules/content/codegame.cli.__init__/: classes.md  constants.md  functions.md
docs/modules/content/codegame.cli.remote_info/: classes.md  constants.md  functions.md
docs/modules/content/codegame.core.__init__/: classes.md  constants.md  functions.md
docs/modules/content/codegame.core.changelog_updater/: classes.md  constants.md  functions.md
docs/modules/content/codegame.core.creator/: classes.md  constants.md  functions.md
docs/modules/content/codegame.core.github_client/: classes.md  constants.md  functions.md
docs/modules/content/codegame.core.publishing/: classes.md  constants.md  functions.md
docs/modules/content/codegame.game.__init__/: classes.md  constants.md  functions.md
docs/modules/content/codegame.game.editor/: classes.md  constants.md  functions.md
docs/modules/content/codegame.game.indexview/: classes.md  constants.md  functions.md
docs/modules/content/codegame.game.testing/: classes.md  constants.md  functions.md
docs/modules/content/codegame.host.__init__/: classes.md  constants.md  functions.md
docs/modules/content/codegame.misc.constant/: classes.md  constants.md  functions.md
docs/modules/content/codegame.misc.funcs/: classes.md  constants.md  functions.md
docs/modules/content/codegame.misc.theme/: classes.md  constants.md  functions.md
(+18 files in other folders)
