[metadata]
name = codegame
version = file: VERSION
url = https://github.com/pyrustic/codegame
author = Pyrustic Evangelist
author_email = pyrustic@protonmail.com
maintainer = Pyrustic Evangelist
maintainer_email = pyrustic@protonmail.com
description = Python desktop application to create, distribute, discover, and run codegames.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    serious-game
    desktop-app
    game
    tkinter
    teaching
    challenge
    platform
    pyrustic
    programming
    coding
    fun
    coding-interview
    riddle
    puzzle
    levels

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    pyrustic
    shared
    litemark
    codeval

[options.entry_points]
console_scripts =
    codegame = codegame.__main__:main
